# BUAA-Compile-SysYC

./: .clang-format  .gitignore  CMakeLists.txt  InstructionStatistics.txt  README.md  ast.txt  checks.json  error.txt  include.txt  llvm_ir.txt  llvm_ir.txt.s  llvm_ir_opt.txt  main.cpp  mips.txt  table.txt  test_mips.S  testfile.txt  testmips.c  testmips.s  token.txt  zip.sh
include/: Compiler.h  Error.h  Log.h  Utils.h
include/codegen/: CodeGenerator.h  Visitor.h  Vistitor.h
include/grammar/: Parser.h  VNode.h  VNodeEnum.h
include/ir/: ControlFlowGraph.h  IR.h  IRTypeEnum.h  Op.inc  Printf.h
include/mips/: MipsCode.h  MipsCodeTypeEnum.h  MipsContext.h  MipsRegEnum.h
include/optimize/: BasicBlockOptimize.h  IrOptPass.h  MipsOptPass.h
include/symbol/: BlockScope.h  BlockScopeHandle.h  SymbolTable.h  SymbolTableItem.h  ValueType.h
include/token/: SymbolEnum.h  Tokenizer.h
src/: Compiler.cpp  Log.cpp  main.cpp
src/codegen/: CodeGenerator.cpp  Visitor.cpp
src/grammar/: Parser.cpp  VNode.cpp
src/ir/: CallFuncGraph.cpp  ControlFlowGraph.cpp  IR.cpp
src/mips/: MipsCode.cpp  MipsContext.cpp
src/optimize/: BasicBlockOptimize.cpp  IrOptPass.cpp  MipsOptPass.cpp
src/symbol/: BlockScope.cpp  SymbolTable.cpp  SymbolTableItem.cpp
src/token/: Tokenizer.cpp
test/: CMakeLists.txt  InstructionStatistics.txt  delims.cpp  input1.txt  output1.txt  recorder.py  runner.py  test.c  test.ll  test.py  testfile1.c  testfile1.txt  testfile2.c  testfile3.c  testfile4.txt
test/error/: ErrorTest.h
test/grammar/: output1.txt  output2.txt  output3.txt  output4.txt  test.txt  testfile1.txt  testfile2.c  testfile2.txt  testfile3.txt  testfile4.c
test/input/: input10.txt  input13.txt
test/symbol/: CMakeLists.txt  SymbolTableTest.cpp  SymbolTableTest.h
(+39 files in other folders)
